--- a/src/lib_scss/mentionspage.scss
+++ b/src/lib_scss/mentionspage.scss
@@ -13,16 +13,16 @@
 
 #m_component{
     width: 600px;
-    margin-top: 120px;
-    margin-bottom: 120px;
+    margin-top: 7.5rem;
+    margin-bottom: 7.5rem;
     text-align: center;
 
     h1{
-        margin-bottom: 80px;
+        margin-bottom: 5rem;
     }
 
     p{
-        margin-bottom: 25px;
+        margin-bottom: 1.5625rem;
     }
 }
 
@@ -33,8 +33,8 @@ a:hover #m_img_princiaple{
 @media screen and (max-width: 600px) {
     #m_component{
         width: 300px;
-        margin-top: 80px;
-        margin-bottom: 80px;
+        margin-top: 5rem;
+        margin-bottom: 5rem;
     }
 }
 
