--- a/src/lib_scss/searchbar.scss
+++ b/src/lib_scss/searchbar.scss
@@ -156,6 +156,12 @@ $logoSize : 25px;
     $searchHeight : 35px;
     $logoSize : 20px;
     
+    #search_div{
+        gap: 0;
+        margin-top: 30px;
+        margin-bottom: 20px;
+    }
+
     #search_bar {
         margin-top: 2.5rem;
         margin-bottom: 2.5rem;
@@ -185,22 +191,6 @@ $logoSize : 25px;
 
 }
 
-// @media screen and (max-width : 375px) {
-//     $searchWidth : 315px;
-
-//     #search_form {
-//         width: 100%;
-//     }
-
-//     #btn_erase {
-//         transform: translate(calc($searchWidth - ($logoSize * 3.3)), calc(($logoSize / 1.8) - $searchHeight ));
-//     }
-
-//     #submit {
-//         transform: translate(calc($searchWidth - ($logoSize * 3.1)), calc(($logoSize / 1.4) - $searchHeight ));
-//     }
-
-// }
 
 @media screen and (max-width : 375px) {
     $searchWidth : 280px;
